--- a/app/static/admin/style.css
+++ b/app/static/admin/style.css
@@ -7,6 +7,10 @@ body {
     background-attachment: fixed;
 }
 
+a {
+    text-decoration: none;
+}
+
 .entry-form {
     background-color: #f9f9f9;
     padding: 15px;
@@ -22,9 +26,19 @@ body {
 }
 
 .form-section label {
-    display: block;
+    display: flex;
     margin-bottom: 4px;
+    flex: 1; /* Allows the label to take up the maximum width */
 }
+
+.form-section label.required::after {
+    content: "required";
+    color: #E2D0D0;
+    font-style: italic;
+    font-size: smaller;
+    text-align: right; /* Aligns the text to the right */
+    width: 100%; /* Full width to push it to the edge */
+  }
 
 .category-group {
     display: flex;
@@ -35,7 +49,7 @@ body {
     margin-right: 15px;
 }
 
-input[type="text"], input[type="file"], input[type="date"] {
+input[type="text"], input[type="file"], input[type="date"], input[type="url"] {
     width: 100%;
     padding: 8px;
     margin: 4px 0;
