--- a/app/templates/timeline/timeline.html
+++ b/app/templates/timeline/timeline.html
@@ -34,11 +34,12 @@
             <!-- Loop through entries to display timeline items -->
             {% for entry in entries %}
 
-            {% set date_class = "highlight" if entry.isToday else ("past" if entry.index < 0 else "") %}
+                {% set date_class = "highlight" if entry.isToday else ("past" if entry.index < 0 else "") %}
                 {% set initial_focus = "initial-focus" if entry.index == -2 else "" %}
                 {% set img_class = "with-img" if entry.image_url else "" %}
+                {% set cancelled_class = "cancelled" if entry.cancelled else "" %}
                 {% set img_style = "background-image: url('" + entry.image_url + "');" if entry.image_url else "" %}
-                <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }} {{ img_class }}" style="{{ img_style }}">
+                <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }} {{ img_class }} {{ cancelled_class }}" style="{{ img_style }}">
                     <span class="date">{{ entry.date_formatted }}</span>
                     <span class="title">{{ entry.title }}</span>
                     {% if entry.description %}
