--- a/app/static/timeline/style.css
+++ b/app/static/timeline/style.css
@@ -147,5 +147,22 @@ html, body {
 @keyframes shake-tilt { 0%, 50%, 100% { transform: translateX(0) rotate(0); } 30%, 70% { transform: translateX(2px) rotate(5deg); }}
 @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); }}
 @keyframes pulsateShadow { 0%, 100% { box-shadow: 0 0 8px 0 orangered } 50% { box-shadow: 0 0 11px 3px orangered }}
-@keyframes pulsate {0%, 100% { transform: scale(1); } 50% { transform: scale(1.08); }
+@keyframes pulsate {0%, 100% { transform: scale(1); } 50% { transform: scale(1.08); }}
+
+.timeline-item.cancelled .title {
+    text-decoration: line-through; /* Strikethrough for the title */
+}
+
+.timeline-item.cancelled::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('cracked-glass.svg'); /* Path to the SVG file */
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 2;
+    opacity: .7;
 }
