--- a/app/static/admin/style.css
+++ b/app/static/admin/style.css
@@ -7,6 +7,14 @@ body {
     background-attachment: fixed;
 }
 
+h1 {
+    position: fixed;
+    top: 20px;
+    margin: 0;
+    color: #ccc;
+    z-index: -1;
+}
+
 a {
     text-decoration: none;
 }
@@ -40,13 +48,20 @@ a {
     width: 100%; /* Full width to push it to the edge */
   }
 
-.category-group {
-    display: flex;
-    gap: 15px;
+.category-group, .checkbox-group {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    gap: 10px;
+    align-items: center;
 }
 
-.category-group label {
-    margin-right: 15px;
+.category-group label input[type="radio"] {
+    align-self: center; /* This ensures the radio is aligned in the center vertically within its label */
+}
+
+.checkbox-group label input[type="checkbox"] {
+    align-self: center; 
+    margin-right: 5px;
 }
 
 input[type="text"], input[type="file"], input[type="date"], input[type="url"] {
@@ -160,4 +175,8 @@ button.delete {
 .maintenance-panel button {
     display: inline;
     margin-right: 10px;
+}
+
+.maintenance-panel .maintenance {
+    background-color: #af9c4c;
 }
