--- a/app/templates/timeline/timeline.html
+++ b/app/templates/timeline/timeline.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendarium: Timeline</title>
+    <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ url_for('static', filename='favicon/favicon.ico', _external=True) }}">
+    <link rel="icon" sizes="128x128" href="{{ url_for('static', filename='favicon/favicon.icns', _external=True) }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon/favicon.png', _external=True) }}" type="image/x-icon">
 
     <!-- Flickity provides timeline functionality -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='timeline/flickity.css') }}">
@@ -31,15 +34,20 @@
 
         <!-- Timeline container with Flickity options -->
         <div class="timeline" data-flickity='{"initialIndex": ".initial-focus", "cellAlign": "left", "pageDots": false, "contain": true, "resize": false}'>
-            <!-- Loop through entries to display timeline items -->
             {% for entry in entries %}
-
-                {% set date_class = "highlight" if entry.isToday else ("past" if entry.index < 0 else "") %}
+                {% set date_class = "highlight" if entry.is_today else ("past" if entry.index < 0 else "") %}
                 {% set initial_focus = "initial-focus" if entry.index == -2 else "" %}
                 {% set img_class = "with-img" if entry.image_url else "" %}
                 {% set cancelled_class = "cancelled" if entry.cancelled else "" %}
+                {% if date_class == "past" %}
+                    {% set background_style = "background: linear-gradient(135deg, #5c6370, #434A54); background-color: #5c6370;" %}
+                {% else %}
+                    {% set background_style = "background: linear-gradient(135deg, " ~ entry.category.color_hex ~ ", " ~ entry.category.color_hex_variation ~ "); background-color: " ~ entry.category.color_hex ~ ";" %}
+                {% endif %}  
                 {% set img_style = "background-image: url('" + entry.image_url + "');" if entry.image_url else "" %}
-                <div class="timeline-item {{ entry.category }} {{ date_class }} {{ initial_focus }} {{ img_class }} {{ cancelled_class }}" style="{{ img_style }}">
+                {% set filter_style = "filter: grayscale(100%);" if date_class == "past" else "" %}
+                <div class="timeline-item {{ date_class }} {{ initial_focus }} {{ img_class }} {{ cancelled_class }}" style="{{ background_style }} {{ img_style }} {{ filter_style }}">
+                    <span class="symbol {{ entry.category.name }}">{{ entry.category.symbol }}</span> <!-- Display the category symbol -->
                     <span class="date">{{ entry.date_formatted }}</span>
                     <span class="title">{{ entry.title }}</span>
                     {% if entry.description %}
@@ -53,8 +61,12 @@
         </div>
     </div>
 
-    <!-- Scripts for Flickity and optional confetti animation -->
+    <!-- Flickity script always included -->
     <script type="text/javascript" src="{{ url_for('static', filename='timeline/flickity.pkgd.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='timeline/confetti.js') }}"></script>
+
+    <!-- Conditional inclusion of confetti script -->
+    {% if display_celebration %}
+        <script type="text/javascript" src="{{ url_for('static', filename='timeline/confetti.js') }}"></script>
+    {% endif %}
 </body>
 </html>
