--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendarium</title>
-    <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ url_for('static', filename='favicon/favicon.ico', _external=True) }}">
-    <link rel="icon" sizes="128x128" href="{{ url_for('static', filename='favicon/favicon.icns', _external=True) }}">
-    <link rel="icon" href="{{ url_for('static', filename='favicon/favicon.png', _external=True) }}" type="image/x-icon">
+    <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <link rel="icon" sizes="128x128" href="{{ url_for('static', filename='favicon/favicon.icns') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon/favicon.png') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='admin/style.css') }}">
     <script src="{{ url_for('static', filename='admin/sort-table.js') }}"></script>
 
