--- a/app/templates/timeline/timeline.html
+++ b/app/templates/timeline/timeline.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calendarium: Timeline</title>
-    <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ url_for('static', filename='favicon/favicon.ico', _external=True) }}">
-    <link rel="icon" sizes="128x128" href="{{ url_for('static', filename='favicon/favicon.icns', _external=True) }}">
-    <link rel="icon" href="{{ url_for('static', filename='favicon/favicon.png', _external=True) }}" type="image/x-icon">
+    <link rel="icon" type="image/vnd.microsoft.icon" sizes="32x32 48x48" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
+    <link rel="icon" sizes="128x128" href="{{ url_for('static', filename='favicon/favicon.icns') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon/favicon.png') }}" type="image/x-icon">
 
     <!-- Flickity provides timeline functionality -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='timeline/flickity.css') }}">
