--- a/app/templates/admin/quotes.html
+++ b/app/templates/admin/quotes.html
@@ -82,10 +82,10 @@
         <form action="{{ url_for('index') }}" method="get">
             <button type="submit">Go to Event list</button>
         </form>
-        <form action="{{ url_for('weekly_quote') }}" method="get">
+        <form action="{{ url_for('weekly_quote_view') }}" method="get">
             <button type="submit">Get weekly Quote</button>
         </form>
-        <form action="{{ url_for('daily_quote') }}" method="get">
+        <form action="{{ url_for('daily_quote_view') }}" method="get">
             <button type="submit">Get daily Quote</button>
         </form>
         <form action="{{ url_for('export_data') }}" method="get">
