--- a/app/static/quotes/style.css
+++ b/app/static/quotes/style.css
@@ -4,7 +4,7 @@ body, html {
     font-family: Cambria, "Palatino Linotype", "Book Antiqua", serif;
     color-scheme: light dark;
     color: var(--text-color);
-    background: transparent;
+    background: black;
 }
 
 .quote-container {
@@ -59,13 +59,6 @@ footer {
 }
 
 :root {
-    --text-color: #000;
-    --subtle-color: #666;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --text-color: #fff;
-        --subtle-color: #999;
-    }
+    --text-color: #fff;
+    --subtle-color: #999;
 }
