--- a/app/templates/quotes/quote.html
+++ b/app/templates/quotes/quote.html
@@ -6,21 +6,19 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='quotes/style.css') }}">
 </head>
 <body>
-    <div class="quote-container">
-        <div class="quote">
-            <blockquote>
-                {{ quote.text }}
-                <footer>
-                    — <cite>{{ quote.author }}</cite>
-                    {% if quote.url %}
-                    <a href="{{ quote.url }}" target="_blank" class="source-link">•</a>
-                    {% endif %}
-                    {% if quote.category %}
-                    <span class="category">{{ quote.category }}</span>
-                    {% endif %}
-                </footer>
-            </blockquote>
-        </div>
+    <div class="quote">
+        <blockquote>
+            {{ quote.text|markdown }}
+            <footer>
+                — <cite>{{ quote.author }}</cite>
+                {% if quote.url %}
+                <a href="{{ quote.url }}" target="_blank" class="source-link">•</a>
+                {% endif %}
+                {% if quote.category %}
+                <span class="category">{{ quote.category }}</span>
+                {% endif %}
+            </footer>
+        </blockquote>
     </div>
 </body>
 </html>
